<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/white">

    <!--   fragment_receipt 클릭시 이동-->
    <include
        android:id="@+id/headForJoin"
        layout="@layout/apptoolbar"/>


    <!-- 이동 경로 표시용 WebView -->
    <WebView
        android:id="@+id/pastWebView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        tools:ignore="WebViewLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headForJoin"/>

    <LinearLayout
        android:id="@+id/layout_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/pastWebView"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textViewDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/f_myong_m"
            android:text="@string/departure"
            android:textColor="@color/navy"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/f_myong_b"
            android:paddingHorizontal="20dp"
            android:text="→"
            android:textColor="@color/navy"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/textViewDeparture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/f_myong_m"
            android:text="@string/destination"
            android:textColor="@color/navy"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_uselist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingVertical="5dp"
        android:background="@drawable/border_round"
        android:elevation="5dp"
        android:gravity="left|center"
        app:layout_constraintTop_toBottomOf="@+id/layout_path"
        >

        <LinearLayout
            android:id="@+id/layout_date"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/f_myong_l"
                android:text="📆 일정"
                android:textColor="#35476D"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/f_myong_b"
                android:paddingHorizontal="10dp"
                android:layout_marginStart="28dp"
                android:text=":"
                android:textColor="#35476D"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/f_myong_l"
                android:textColor="#35476D"
                android:text="@string/date"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>


<!--        <LinearLayout-->
<!--            android:id="@+id/layout_time"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:gravity="left|center"-->
<!--            android:paddingLeft="20dp"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/layout_date"-->
<!--            tools:layout_editor_absoluteX="0dp">-->

<!--            <TextView-->
<!--                android:id="@+id/textViewTime"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/f_myong_l"-->
<!--                android:text="🕐 소요시간"-->
<!--                android:textColor="#35476D"-->
<!--                android:textSize="15dp"/>-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/f_myong_b"-->
<!--                android:paddingHorizontal="10dp"-->
<!--                android:text=":"-->
<!--                android:textColor="#35476D"-->
<!--                android:textSize="15sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/textViewTimeValue"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/f_myong_l"-->
<!--                android:text="@string/time"-->
<!--                android:textColor="#35476D"-->
<!--                android:textSize="15dp" />-->
<!--        </LinearLayout>-->


        <LinearLayout
            android:id="@+id/layout_totalcost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/layout_time">

            <TextView
                android:id="@+id/textViewTotalCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/f_myong_l"
                android:text="💰 총 금액"
                android:textColor="#35476D"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/f_myong_b"
                android:paddingHorizontal="10dp"
                android:layout_marginStart="10dp"
                android:text=":"
                android:textColor="#35476D"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewToatalCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/f_myong_l"
                android:text="@string/total_cost"
                android:textColor="#35476D"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_memberlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingVertical="15dp"
        android:background="@drawable/border_round"
        android:elevation="5dp"
        android:gravity="left|center"
        app:layout_constraintTop_toBottomOf="@+id/layout_uselist"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:fontFamily="@font/f_myong_l"
                android:text="함께 탄 사람"
                android:textColor="#35476D"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- 함께할 파티원 수 텍스트 -->
            <TextView
                android:id="@+id/tvPartnerCount02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/f_myong_l"
                android:text="99"
                />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:cardElevation="0dp"
            >
            <!-- 파티원 목록 -->
            <ListView
                android:id="@+id/pastListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/transparent"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>